--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,7 +47,7 @@ test:
 about:
   home: https://gitlab.kuleuven.be/ITSCreaLab/public-toolboxes/dyntapy
   summary: Macroscopic Static and Dynamic Traffic Assignment in Python
-  license: GPL-3.0
+  license: GPL-3.0-only
   license_file: LICENSE.txt
 
 extra:
