--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
-  number: 0
+  number: 1
 
 requirements:
   host:
@@ -20,8 +20,8 @@ requirements:
     - pip
   run:
     - python >=3.8
-    - numba
-    - bokeh
+    - numba >=0.54.1
+    - bokeh <3.0
     - osmnx
     - pandas
     - scipy
